---------------------------------------------------------------------------------------------------
Version: 0.33.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.33.1
Date: 2024-06-02
  Bugfixes:
    - When inserting a new stage, the stage will also be inserted in the blueprint book template (if it exists).
---------------------------------------------------------------------------------------------------
Version: 0.33.0
Date: ????
  Features:
    - Clicking a gps tag on a stage now teleports you to that location. This can be configured in player settings, default on.
---------------------------------------------------------------------------------------------------
Version: 0.32.6
Date: ????
  Changes:
    - Removed intrusive CTRL-A default keybinding.
---------------------------------------------------------------------------------------------------
Version: 0.32.5
Date: ????
  Features:
    - Added limited support for most EditorExtensions entities.
    - NOT supported: linked belt, infinity wagons. Partial support: infinity pump. All other entities should be supported.
    - Stage info does not show up in modded GUIs.
---------------------------------------------------------------------------------------------------
Version: 0.32.4
Date: 2024-05-11
  Changes:
    - Removed need to automatically unlock all recipes to use the mod.
---------------------------------------------------------------------------------------------------
Version: 0.32.3
Date: 2024-04-22
  Bugfixes:
    - Fixed auto-numbering of stages with multiple digit numbers.
---------------------------------------------------------------------------------------------------
Version: 0.32.2
Date: 2024-04-15
  Changes:
    - The mod unlocks all recipes (not all tech) when creating the first project, instead of when opening the project list.